samples/_failures_safe/1761264639_7a875c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e92f8721.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e92f8721.c:177:9: error: expected expression at end of input
  177 |         } else if (read_string(t, &token))
      |         ^
./samples/SAFE/__tmp_e92f8721.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e92f8721.c:177:9: error: expected declaration or statement at end of input
